# seed-oi

./: .gitignore  README.md  run_local.sh
apps/api-python/: README.md  debug_422.py  main.py  pyproject.toml  requirements.txt
apps/api-python/api/dependencies/: security.py
apps/api-python/api/routers/: auth.py  chat.py  events.py  health.py  ingestion.py  overview.py  risks.py  scenarios.py  settings.py  sources.py  system.py
apps/api-python/api/schemas/: settings.py
apps/api-python/application/chat/: fallback.py  planner.py  query_understanding.py  schemas.py  tools.py
apps/api-python/application/security/: authorization.py  current_user.py
apps/api-python/application/services/: agent.py  chat_orchestrator.py  event_publisher.py  ingestion_service.py  llm.py  observability.py  settings_service.py
apps/api-python/domain/: models.py
apps/api-python/infrastructure/: config.py  database.py  logging.py  security.py
apps/api-python/infrastructure/auth/: oidc.py
apps/api-python/infrastructure/llm/: chat_model.py
apps/api-python/tests/: test_auth.py
apps/api-python/tests/application/: test_agent.py  test_chat_orchestrator.py  test_event_broker.py
apps/api-python/tests/application/chat/: test_intelligent_agent.py  test_query_understanding.py
apps/api-python/tests/application/services/: test_observability.py
apps/web/: README.md  package-lock.json  package.json  (+1 more)
db/: README.md  alembic.ini  pyproject.toml  requirements.txt  seed.py
docs/: auth0_setup.md  canonical_model.md  frontend_quality.md  ingestion_lifecycle.md  realtime_strategy.md
(+71 files in other folders)
